package eapli.base.question.domain;

public enum TypeOfQuestion {
    MATCHING,
    MULTIPLE_CHOICE,
    SHORT_ANSWER,
    NUMERICAL,
    MISSING_WORDS,
    TRUE_FALSE;
}
