package eapli.base.question.dto;

public class QuestionDTO {
}
